# AI-Detector

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data-generation/: pyproject.toml
data-generation/src/: check_batch.py  combine_data.py  create_rewrite_batch.py  create_summary_batch.py  retrieve_batch.py  upload_batch.py  utils.py
data-generation/tmp/: errors_batch_6925fbcef7148190880b7189b7cbf59c.jsonl  errors_batch_692724b4bdfc8190b7d6bf37889eed95.jsonl
raid/: pyproject.toml
raid/analysis/: predictions_10000.csv
raid/src/: aggregators.py  data.py  inference.py  run_analysis.py  run_benchmark.py
scraping/: pyproject.toml
scraping/src/: main.py  random_list.py
training/src/: token_length.py  train.py  vis_train.py
