[project]
name = "slop-detector-app"
version = "0.1.0"
description = "Streamlit frontend for the AI slop detector"
requires-python = ">=3.13.1"
dependencies = [
    "peft>=0.18.0",
    "streamlit>=1.40.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
